Revert "Update dotnet-core.yml"
This reverts commit 9b0efd279de58ce7d50739202b160c16befaf91f.

--- a/.github/workflows/dotnet-core.yml
+++ b/.github/workflows/dotnet-core.yml
@@ -2,9 +2,9 @@ name: Build and test (.NET Core)
 
 on:
   push:
-    branches: [ master, delete_logs_branch ]
+    branches: [ master ]
   pull_request:
-    branches: [ master, delete_logs_branch ]
+    branches: [ master ]
 
 jobs:
   build:
