Added a way to add Boss Images to the filtertree
-standard, large, medium kitty golems have pictures
-freezie has a picture

To add a new picture:
    1. Set up a static item for it in Ressources (put the png into the Images/ArenaNet/Bosses folder)
          -if you put the picture into the correct folder you can use the GetrBossImage method and only use the icon name
    2. Set up a Lazy Image in the ImageProvider that uses the static method from Ressources
    3. Add the encounter to the switch expression in ImageProvider.GetTinyRaidBossIcon
Done!

but seriously though, we need a better way to store and handle pictures

--- a/ArcdpsLogManager/ArcdpsLogManager.csproj
+++ b/ArcdpsLogManager/ArcdpsLogManager.csproj
@@ -240,6 +240,18 @@
     </Content>
   </ItemGroup>
   <ItemGroup>
+    <None Update="Images\ArenaNet\Bosses\freezie_icon_32px.png">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </None>
+    <None Update="Images\ArenaNet\Bosses\large_kitty_golem_32px.png">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </None>
+    <None Update="Images\ArenaNet\Bosses\medium_kitty_golem_32px.png">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </None>
+    <None Update="Images\ArenaNet\Bosses\standard_kitty_golem_32px.png">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </None>
     <None Update="Images\ArenaNet\raid_wing_32px.png">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </None>
