--- a/ArcdpsLogManager.Wpf/ArcdpsLogManager.Wpf.csproj
+++ b/ArcdpsLogManager.Wpf/ArcdpsLogManager.Wpf.csproj
@@ -10,6 +10,7 @@
 
     <PropertyGroup>
         <ApplicationManifest>app.manifest</ApplicationManifest>
+        <ApplicationIcon>../ArcdpsLogManager/Images/program_icon.ico</ApplicationIcon>
     </PropertyGroup>
 
     <ItemGroup>
