--- a/ArcdpsLogManager.Wpf/ArcdpsLogManager.Wpf.csproj
+++ b/ArcdpsLogManager.Wpf/ArcdpsLogManager.Wpf.csproj
@@ -2,7 +2,7 @@
 
     <PropertyGroup>
         <OutputType>WinExe</OutputType>
-        <TargetFramework>netcoreapp3.1</TargetFramework>
+        <TargetFramework>net6.0</TargetFramework>
         <RootNamespace>GW2Scratch.ArcdpsLogManager.Wpf</RootNamespace>
         <AssemblyName>GW2Scratch.ArcdpsLogManager.Wpf</AssemblyName>
         <UseWPF>true</UseWPF>
