--- a/EVTCAnalytics.Benchmark/GW2Scratch.EVTCAnalytics.Benchmark.csproj
+++ b/EVTCAnalytics.Benchmark/GW2Scratch.EVTCAnalytics.Benchmark.csproj
@@ -1,6 +1,6 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
   <PropertyGroup>
-    <TargetFramework>netcoreapp3.1</TargetFramework>
+    <TargetFramework>net6.0</TargetFramework>
     <RootNamespace>GW2Scratch.EVTCAnalytics.Benchmark</RootNamespace>
     <AssemblyName>GW2Scratch.EVTCAnalytics.Benchmark</AssemblyName>
     <OutputType>Exe</OutputType>
