--- a/EVTCInspector.Gtk/EVTCInspector.Gtk.csproj
+++ b/EVTCInspector.Gtk/EVTCInspector.Gtk.csproj
@@ -2,7 +2,7 @@
 
     <PropertyGroup>
         <OutputType>Exe</OutputType>
-        <TargetFramework>netcoreapp3.1</TargetFramework>
+        <TargetFramework>net6.0</TargetFramework>
         <RootNamespace>GW2Scratch.EVTCInspector.Gtk</RootNamespace>
         <AssemblyName>GW2Scratch.EVTCInspector.Gtk</AssemblyName>
     </PropertyGroup>
