--- a/LogEditor/LogEditor.csproj
+++ b/LogEditor/LogEditor.csproj
@@ -1,7 +1,7 @@
 <Project Sdk="Microsoft.NET.Sdk">
     <PropertyGroup>
         <OutputType>Exe</OutputType>
-        <TargetFramework>netcoreapp3.1</TargetFramework>
+        <TargetFramework>net6.0</TargetFramework>
         <LangVersion>latest</LangVersion>
         <AssemblyName>GW2Scratch.LogEditor</AssemblyName>
         <RootNamespace>GW2Scratch.LogEditor</RootNamespace>
