--- a/Tests/EVTCAnalytics.LogTests.LocalSets/EVTCAnalytics.LogTests.LocalSets.csproj
+++ b/Tests/EVTCAnalytics.LogTests.LocalSets/EVTCAnalytics.LogTests.LocalSets.csproj
@@ -1,6 +1,6 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
     <PropertyGroup>
-        <TargetFramework>netcoreapp3.1</TargetFramework>
+        <TargetFramework>net6.0</TargetFramework>
         <RootNamespace>GW2Scratch.EVTCAnalytics.LogTests.LocalSets</RootNamespace>
         <AssemblyName>GW2Scratch.EVTCAnalytics.LogTests.LocalSets</AssemblyName>
         <OutputType>Exe</OutputType>
