--- a/EVTCInspector.Wpf/EVTCInspector.Wpf.csproj
+++ b/EVTCInspector.Wpf/EVTCInspector.Wpf.csproj
@@ -2,7 +2,7 @@
 
     <PropertyGroup>
         <OutputType>WinExe</OutputType>
-        <TargetFramework>net6.0</TargetFramework>
+        <TargetFramework>net6.0-windows</TargetFramework>
         <RootNamespace>GW2Scratch.EVTCInspector.Wpf</RootNamespace>
         <AssemblyName>GW2Scratch.EVTCInspector.Wpf</AssemblyName>
         <UseWPF>true</UseWPF>
