Manager: Embed images as EmbeddedResources
This is required, as the single file publish no longer creates a self-decompressing archive executable.

--- a/ArcdpsLogManager/ArcdpsLogManager.csproj
+++ b/ArcdpsLogManager/ArcdpsLogManager.csproj
@@ -31,8 +31,6 @@
         <ProjectReference Include="..\EVTCInspector\EVTCInspector.csproj" />
     </ItemGroup>
     <ItemGroup>
-        <None Update="Images\**">
-            <CopyToOutputDirectory>Always</CopyToOutputDirectory>
-        </None>
+        <EmbeddedResource Include="Images\**" />
     </ItemGroup>
 </Project>
