--- a/ArcdpsLogManager/ArcdpsLogManager.csproj
+++ b/ArcdpsLogManager/ArcdpsLogManager.csproj
@@ -20,7 +20,7 @@
         <Version>1.4.0.1</Version>
     </PropertyGroup>
     <ItemGroup>
-        <PackageReference Include="Eto.Forms" Version="2.5.11-ci-20210422.772645364" />
+        <PackageReference Include="Eto.Forms" Version="2.6.1" />
         <PackageReference Include="Gw2Sharp" Version="0.6.0" />
         <PackageReference Include="Newtonsoft.Json" Version="12.0.3" />
         <PackageReference Include="RestSharp" Version="106.12.0" />
