--- a/EVTCInspector.Gtk/EVTCInspector.Gtk.csproj
+++ b/EVTCInspector.Gtk/EVTCInspector.Gtk.csproj
@@ -8,7 +8,7 @@
     </PropertyGroup>
 
     <ItemGroup>
-      <PackageReference Include="Eto.Platform.Gtk" Version="2.5.11-ci-20210422.772645364" />
+      <PackageReference Include="Eto.Platform.Gtk" Version="2.6.1" />
     </ItemGroup>
 
     <ItemGroup>
