--- a/EVTCInspector/EVTCInspector.csproj
+++ b/EVTCInspector/EVTCInspector.csproj
@@ -5,7 +5,7 @@
     <AssemblyName>GW2Scratch.EVTCInspector</AssemblyName>
   </PropertyGroup>
   <ItemGroup>
-    <PackageReference Include="Eto.Forms" Version="2.5.11-ci-20210422.772645364" />
+    <PackageReference Include="Eto.Forms" Version="2.6.1" />
     <PackageReference Include="Newtonsoft.Json" Version="12.0.3" />
   </ItemGroup>
   <ItemGroup>
