--- a/EVTCInspector/EVTCInspector.csproj
+++ b/EVTCInspector/EVTCInspector.csproj
@@ -13,5 +13,6 @@
   </ItemGroup>
   <ItemGroup>
     <Folder Include="Properties" />
+    <Folder Include="PropertyGridCells" />
   </ItemGroup>
 </Project>
