--- a/Tests/EVTCAnalytics.LogTests.LocalSets/EVTCAnalytics.LogTests.LocalSets.csproj
+++ b/Tests/EVTCAnalytics.LogTests.LocalSets/EVTCAnalytics.LogTests.LocalSets.csproj
@@ -7,7 +7,7 @@
         <LangVersion>latest</LangVersion>
     </PropertyGroup>
     <ItemGroup>
-        <PackageReference Include="Newtonsoft.Json" Version="12.0.3" />
+        <PackageReference Include="Tomlyn" Version="0.15.0" />
     </ItemGroup>
     <ItemGroup>
         <ProjectReference Include="..\EVTCAnalytics.LogTests\EVTCAnalytics.LogTests.csproj" />
